--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,7 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
+            {% if user.is_authenticated %}
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
                     <a href="index.html" class="app-brand-link">
@@ -153,12 +154,12 @@
                         </a>
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="#" class="menu-link">
+                                <a href="{% url 'changePassword'%}" class="menu-link">
                                     <div data-i18n="Change">Đổi mật khẩu</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="#" class="menu-link">
+                                <a href="{% url 'logout'%}" class="menu-link">
                                     <div data-i18n="Đăng xuất">Đăng xuất</div>
                                 </a>
                             </li>
@@ -166,6 +167,7 @@
                     </li>
                 </ul>
             </aside>
+            {%endif%}
             <!-- / Menu -->
 
             <!-- Layout container -->
