quinn: view and search list of member

--- a/example/templates/index.html
+++ b/example/templates/index.html
@@ -135,12 +135,12 @@
 
                         <ul class="menu-sub">
                             <li class="menu-item">
-                                <a href="{% url 'view_member'%}" class="menu-link">
+                                <a href="#" class="menu-link">
                                     <div data-i18n="Danh sách thành viên">Danh sách thành viên</div>
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a class="menu-link">
+                                <a href="#" class="menu-link">
                                     <div data-i18n="Thêm thành viên">Thêm thành viên</div>
                                 </a>
                             </li>
