--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
     <div class="layout-wrapper layout-content-navbar">
         <div class="layout-container">
             <!-- Menu -->
-            {% if user.is_authenticated %}
+            {% if request.user.username %}
             <aside id="layout-menu" class="layout-menu menu-vertical menu bg-menu-theme">
                 <div class="app-brand demo">
                     <a href="index.html" class="app-brand-link">
