--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -141,7 +142,7 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a class="menu-link">
+                                <a href ="{% url 'members'%}" class="menu-link">
                                     <div data-i18n="Thêm thành viên">Thêm thành viên</div>
                                 </a>
                             </li>
