quinn: update member

--- a/templates/members/view_member.html
+++ b/templates/members/view_member.html
@@ -67,11 +67,11 @@
                       <i class="bx bx-dots-vertical-rounded"></i>
                     </button>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-edit-alt me-1"></i> Edit</a
+                      <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
+                        ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
                       >
                       <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-trash me-1"></i> Delete</a
+                        ><i class="bx bx-trash me-1"></i> Xóa</a
                       >
                     </div>
                   </div>
@@ -118,11 +118,11 @@
                       <i class="bx bx-dots-vertical-rounded"></i>
                     </button>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-edit-alt me-1"></i> Edit</a
+                      <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
+                        ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
                       >
                       <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-trash me-1"></i> Delete</a
+                        ><i class="bx bx-trash me-1"></i> Xóa</a
                       >
                     </div>
                   </div>
