quin: delete member

--- a/templates/members/view_member.html
+++ b/templates/members/view_member.html
@@ -121,8 +121,11 @@
                       <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
                         ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
                       >
-                      <a class="dropdown-item" href="javascript:void(0);"
+                      <a class="dropdown-item" href="/members/delete/{{ member.member_id }}"
                         ><i class="bx bx-trash me-1"></i> Xóa</a
+                      >
+                      <a class="dropdown-item" href="javascript:void(0);"
+                        ><i class="bx bx-trash me-1"></i> Lịch sử thanh toán</a
                       >
                     </div>
                   </div>
