--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@
                 <ul class="menu-inner py-1">
                     <!-- Dashboard -->
                     <li class="menu-item">
-                        <a href="/" class="menu-link">
+                        <a href="{% url 'index'%}" class="menu-link">
                             <i class="menu-icon tf-icons bx bx-home-circle"></i>
                             <div data-i18n="Thống kê">Thống kê</div>
                         </a>
