quinn: create tab to view member

--- a/templates/members/view_member.html
+++ b/templates/members/view_member.html
@@ -6,136 +6,234 @@
 
 {% block content %}
 
+
 <div class="container-xxl flex-grow-1 container-p-y">
-  <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Tables /</span> Basic Tables</h4>
-  <div class="card">
-    <h5 class="card-header">Danh sách thành viên</h5>
-    <form method="POST" action="{% url 'search_member' %}">
-      {% csrf_token %}
-      <div class=" mb-4 d-flex">
-        <div class="col"></div>
-        <div class="col">
-          <label for="search">{{ search_form.search.label }}</label>
-          {{ search_form.search}}
-        </div>
-        <div class="{% if not result %} col {% endif %}">
-          <button type="submit" id="submit" class="btn btn-primary" style="margin-right: 30px;">Search</button>
-        </div>
-        {% if result %}
-          <div class="col">
-            <button type="submit" id="clear" name="clear" class="btn btn-dark">Clear</button>
+  <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Danh sách thành viên /</span></h4>
+  
+    <div class="row">
+      <div class="col-xl-12">
+        <div class="nav-align-top mb-4">
+          <ul class="nav nav-pills mb-3" role="tablist">
+            <li class="nav-item">
+              <button
+                type="button"
+                class="nav-link active"
+                role="tab"
+                data-bs-toggle="tab"
+                data-bs-target="#navs-pills-top-home"
+                aria-controls="navs-pills-top-home"
+                aria-selected="true"
+              >
+                Thành viên
+              </button>
+            </li>
+            <li class="nav-item">
+              <button
+                type="button"
+                class="nav-link"
+                role="tab"
+                data-bs-toggle="tab"
+                data-bs-target="#navs-pills-top-profile"
+                aria-controls="navs-pills-top-profile"
+                aria-selected="false"
+              >
+                Đang gia hạn
+              </button>
+            </li>
+          </ul>
+          
+          <form method="POST" action="{% url 'search_member' %}">
+            {% csrf_token %}
+            <div class=" mb-4 d-flex align-items-end">
+              <div class="col"></div>
+              <div class="col">
+                <label for="search">{{ search_form.search.label }}</label>
+                {{ search_form.search | add_css:"form-control"}}
+              </div>
+              <div class="{% if not result %} col d-flex justify-content-center h-25 {% endif %}">
+                <button type="submit" id="submit" class="btn btn-primary" style="margin-left: 30px;">Search</button>
+              </div>
+              {% if result %}
+                <div class="col d-flex justify-content-center h-25">
+                  <button type="submit" id="clear" name="clear" class="btn btn-dark">Clear</button>
+                </div>
+              {% endif %}
+            </div>      
+          </form>
+          <div class="tab-content">
+            <div class="tab-pane fade show active" id="navs-pills-top-home" role="tabpanel">
+              <div class="table-responsive text-nowrap">
+                {% if result %}
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Tên</th>
+                        <th>Ngày sinh</th>
+                        <!-- <th>Photo</th> -->
+                        <th>Ngày đăng kí</th>
+                        <th>Hạn đăng kí</th>
+                        <th>Gói đăng kí</th>
+                        <th>Thời gian đăng kí</th>
+                        <th>Fees</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody class="table-border-bottom-0">
+                      {% for member in result %}
+                        <tr>
+                          <!-- <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td> -->
+                          <td>{{ member.first_name }} {{ member.last_name }}</td>
+                          <td>{{ member.dob }}</td>
+                          <td>{{ member.registration_date }}</td>
+                          <td>{{ member.registration_upto }}</td>
+                          <td>{{ member.get_subscription_type_display }}</td>
+                          <td>{{ member.subscription_period }} Months</td>
+                          <td>
+                            {% if member.fee_status == 'paid' %}
+                              <span class="badge bg-label-success me-1">Paid</span>
+                            {% else %}
+                              <span class="badge bg-label-danger me-1">Pending</span>
+                            {% endif %}
+                          </td>
+                          <td>
+                            <div class="dropdown">
+                              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                <i class="bx bx-dots-vertical-rounded"></i>
+                              </button>
+                              <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
+                                  ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
+                                >
+                                <a class="dropdown-item" href="javascript:void(0);"
+                                  ><i class="bx bx-trash me-1"></i> Xóa</a
+                                >
+                              </div>
+                            </div>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                {% else %}
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Tên</th>
+                        <th>Ngày sinh</th>
+                        <!-- <th>Photo</th> -->
+                        <th>Ngày đăng kí</th>
+                        <th>Hạn đăng kí</th>
+                        <th>Gói đăng kí</th>
+                        <th>Thời gian đăng kí</th>
+                        <th>Fees</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody class="table-border-bottom-0">
+                      {% for member in all %}
+                        <tr>
+                          <!-- <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td> -->
+                          <td>{{ member.first_name }} {{ member.last_name }}</td>
+                          <td>{{ member.dob }}</td>
+                          <td>{{ member.registration_date }}</td>
+                          <td>{{ member.registration_upto }}</td>
+                          <td>{{ member.get_subscription_type_display }}</td>
+                          <td>{{ member.subscription_period }} Months</td>
+                          <td>
+                            {% if member.fee_status == 'paid' %}
+                              <span class="badge bg-label-success me-1">Paid</span>
+                            {% else %}
+                              <span class="badge bg-label-danger me-1">Pending</span>
+                            {% endif %}
+                          </td>
+                          <td>
+                            <div class="dropdown">
+                              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                <i class="bx bx-dots-vertical-rounded"></i>
+                              </button>
+                              <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
+                                  ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
+                                >
+                                <a class="dropdown-item" href="/members/delete/{{ member.member_id }}"
+                                  ><i class="bx bx-trash me-1"></i> Xóa</a
+                                >
+                                <a class="dropdown-item" href="/payments/history_payment/{{ member.member_id }}"
+                                  ><i class=" bx bx-credit-card"></i> Lịch sử thanh toán</a
+                                >
+                              </div>
+                            </div>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                  {% endif %}
+              </div>
+            </div>
+            <div class="tab-pane fade" id="navs-pills-top-profile" role="tabpanel">
+              <div class="table-responsive text-nowrap">
+                {% if all1 %}
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Tên</th>
+                        <th>Ngày sinh</th>
+                        <!-- <th>Photo</th> -->
+                        <th>Ngày đăng kí</th>
+                        <th>Hạn đăng kí</th>
+                        <th>Gói đăng kí</th>
+                        <th>Thời gian đăng kí</th>
+                        <th>Fees</th>
+                        <th></th>
+                      </tr>
+                    </thead>
+                    <tbody class="table-border-bottom-0">
+                      {% for member in all1 %}
+                        <tr>
+                          <!-- <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td> -->
+                          <td>{{ member.first_name }} {{ member.last_name }}</td>
+                          <td>{{ member.dob }}</td>
+                          <td>{{ member.registration_date }}</td>
+                          <td>{{ member.registration_upto }}</td>
+                          <td>{{ member.get_subscription_type_display }}</td>
+                          <td>{{ member.subscription_period }} Months</td>
+                          <td>
+                            {% if member.fee_status == 'paid' %}
+                              <span class="badge bg-label-success me-1">Paid</span>
+                            {% else %}
+                              <span class="badge bg-label-danger me-1">Pending</span>
+                            {% endif %}
+                          </td>
+                          <td>
+                            <div class="dropdown">
+                              <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
+                                <i class="bx bx-dots-vertical-rounded"></i>
+                              </button>
+                              <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
+                                  ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
+                                >
+                                <a class="dropdown-item" href="/members/delete/{{ member.member_id }}"
+                                  ><i class="bx bx-trash me-1"></i> Xóa</a
+                                >
+                                <a class="dropdown-item" href="/payments/history_payment/{{ member.member_id }}"
+                                  ><i class="bx bx-trash me-1"></i> Lịch sử thanh toán</a
+                                >
+                              </div>
+                            </div>
+                          </td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                  {% endif %}
+              </div>
+            </div>
           </div>
-        {% endif %}
-      </div>      
-  </form>
-    <div class="table-responsive text-nowrap">
-      {% if result %}
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Tên</th>
-              <th>Ngày sinh</th>
-              <!-- <th>Photo</th> -->
-              <th>Ngày đăng kí</th>
-              <th>Hạn đăng kí</th>
-              <th>Gói đăng kí</th>
-              <th>Thời gian đăng kí</th>
-              <th>Fees</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody class="table-border-bottom-0">
-            {% for member in result %}
-              <tr>
-                <!-- <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td> -->
-                <td>{{ member.first_name }} {{ member.last_name }}</td>
-                <td>{{ member.dob }}</td>
-                <td>{{ member.registration_date }}</td>
-                <td>{{ member.registration_upto }}</td>
-                <td>{{ member.get_subscription_type_display }}</td>
-                <td>{{ member.subscription_period }} Months</td>
-                <td>
-                  {% if member.fee_status == 'paid' %}
-                    <span class="badge bg-label-success me-1">Paid</span>
-                  {% else %}
-                    <span class="badge bg-label-danger me-1">Pending</span>
-                  {% endif %}
-                </td>
-                <td>
-                  <div class="dropdown">
-                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                      <i class="bx bx-dots-vertical-rounded"></i>
-                    </button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
-                        ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
-                      >
-                      <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-trash me-1"></i> Xóa</a
-                      >
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      {% else %}
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Tên</th>
-              <th>Ngày sinh</th>
-              <!-- <th>Photo</th> -->
-              <th>Ngày đăng kí</th>
-              <th>Hạn đăng kí</th>
-              <th>Gói đăng kí</th>
-              <th>Thời gian đăng kí</th>
-              <th>Fees</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody class="table-border-bottom-0">
-            {% for member in all %}
-              <tr>
-                <!-- <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Angular Project</strong></td> -->
-                <td>{{ member.first_name }} {{ member.last_name }}</td>
-                <td>{{ member.dob }}</td>
-                <td>{{ member.registration_date }}</td>
-                <td>{{ member.registration_upto }}</td>
-                <td>{{ member.get_subscription_type_display }}</td>
-                <td>{{ member.subscription_period }} Months</td>
-                <td>
-                  {% if member.fee_status == 'paid' %}
-                    <span class="badge bg-label-success me-1">Paid</span>
-                  {% else %}
-                    <span class="badge bg-label-danger me-1">Pending</span>
-                  {% endif %}
-                </td>
-                <td>
-                  <div class="dropdown">
-                    <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                      <i class="bx bx-dots-vertical-rounded"></i>
-                    </button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="/members/update/{{ member.member_id }}"
-                        ><i class="bx bx-edit-alt me-1"></i> Chỉnh sửa</a
-                      >
-                      <a class="dropdown-item" href="/members/delete/{{ member.member_id }}"
-                        ><i class="bx bx-trash me-1"></i> Xóa</a
-                      >
-                      <a class="dropdown-item" href="javascript:void(0);"
-                        ><i class="bx bx-trash me-1"></i> Lịch sử thanh toán</a
-                      >
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-        {% endif %}
+        </div>
+      </div>
     </div>
-  </div>
+  
 </div>
 {% endblock %}
