--- a/templates/base.html
+++ b/templates/base.html
@@ -146,6 +146,11 @@
                                     <div data-i18n="Thêm thành viên">Thêm thành viên</div>
                                 </a>
                             </li>
+                            <li class="menu-item">
+                                <a href ="{% url 'reports'%}" class="menu-link">
+                                    <div data-i18n="Báo cáo"> Báo cáo</div>
+                                </a>
+                            </li>
                         </ul>
                     </li>
                     <li class="menu-item">
