--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
                         </a>
                     </li>
                     <li class="menu-item">
-                        <a href="/" class="menu-link">
+                        <a href="{% url 'searchNotification'%}" class="menu-link">
                             <i class="menu-icon tf-icons bx bxs-bell-ring"></i>
                             <div data-i18n="Thông báo">Thông báo</div>
                         </a>
@@ -209,8 +209,8 @@
     <script src="{% static '/js/main.js' %}"></script>
 
     <!-- Page JS -->
-    <script src="{% static '/js/dashboards-analytics.js' %}"></script>
-    {% block javascript %}{% endblock %}
+    {% block javascript %}
+    {% endblock %}
 
 </body>
 
