--- a/templates/dashboards/index.html
+++ b/templates/dashboards/index.html
@@ -14,6 +14,7 @@ Thống kê
         get_revenue: "{% url 'get_revenue' %}",
     };
 </script>
+<script src="{% static '/js/dashboards-analytics.js' %}"></script>
 {% endblock %}
 
 {% block content %}
